# movie-matrix

./: .env  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Cargo.toml  build.rs  package.json
api/configuration/: base.yml  local.yml
api/migrations/: 20240603194551_create_user_and_session_table.sql  20240604124824_create_movies_and_genres_tables.sql  20240605072710_create_ratings_table.sql
api/src/: configuration.rs  interceptor.rs  lib.rs  main.rs  predictions.rs  recommander.rs  startup.rs  tasks.rs
api/src/domain/: hashed_password.rs  mod.rs  session_token.rs
api/src/services/: mod.rs  movie.rs  user.rs
api/tests/api/: helpers.rs  main.rs  movie.rs  user.rs
proto/: movie.proto  user.proto
scripts/: build_proto.sh  init_db.sh
web/: .env  middleware.ts  next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/(components)/: Card.tsx  FancyButton.tsx  SearchBar.tsx
web/app/(home)/: layout.tsx
web/app/(home)/movies/: actions.ts  movies-grid.tsx  page.tsx  recommendation.tsx  search-movies.tsx
web/app/(user)/: action.ts
web/app/(user)/login/: page.tsx
web/app/movies/: actions.ts  layout.tsx  movies-grid.tsx  page.tsx  search-movies.tsx
web/app/robots.txt/: page.tsx
web/app/user/: layout.tsx  page.tsx
web/components/: footer.tsx  header.tsx  navbar.tsx  query-provider.tsx  user-login.tsx  user-signup.tsx  userLogin.tsx  userSignup.tsx  viarezo-logo.tsx
web/components/landing/: about.tsx  faq.tsx  footer.tsx  header.tsx  hero.tsx  herocards.tsx  navbar.tsx  statistics.tsx
web/components/movies/: clientmovies.tsx  infinitescroll.tsx  searchmovies.tsx
web/lib/: grpc.ts  session.ts
web/services/: movie.ts  user.ts
(+14 files in other folders)
