[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
tonic-middleware = "0.1.4"
tokio = { version = "1.38.0", features = ["full"] }
prost = "0.12.6"
config = "0.11"
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
uuid = { version = "0.8.1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
hora = "0.1"
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
serde_json = "1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[build-dependencies]
tonic-build = "0.11"
